# fraudmetrics

./: LICENSE  README.md  examples.py  generator.py  plot_curves.py  pyproject.toml  rank_based.py  requirements.txt  setup.py  threshold_free.py  thresholded.py  value_based.py
examples/: example.py  examples.py
fraudmetrics/: __init__.py  generator.py  plot_curves.py  rank_based.py  threshold_free.py  thresholded.py  value_based.py
fraudmetrics/utils/: __init__.py
utils/: sort_predictions.py  validate_inputs.py
