[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudmetrics"
version = "0.1.0"
authors = [
    { name = "yashasnadigsyn", email = "yashasnadigsyn@outlook.com" },
]
description = "A library for fraud detection metrics and analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["metrics", "fraud detection", "machine learning", "evaluation", "finance"]

dependencies = [
    "numpy",
    "scikit-learn",
    "altair",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/yashasnadigsyn/fraudmetrics"
"Bug Tracker" = "https://github.com/yashasnadigsyn/fraudmetrics/issues"