[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraudmetrics"
version = "0.2.0"
description = "A comprehensive Python library for evaluating fraud detection models with specialized metrics for business impact analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yashas Nadig", email = "yashasnadigsyn@outlook.com"}
]
keywords = ["fraud-detection", "machine-learning", "metrics", "evaluation", "binary-classification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>2.0",
    "pandas>2.2",
    "seaborn>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/yashasnadigsyn/fraudmetrics"
Repository = "https://github.com/yashasnadigsyn/fraudmetrics"
Documentation = "https://github.com/yashasnadigsyn/fraudmetrics#readme"
Issues = "https://github.com/yashasnadigsyn/fraudmetrics/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
